--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
     <header>
           <div class="header-content">
-            <img src="F:\profile\ARAVINDH A.jpg"alt="your profile picture" class="profile-picture">
+            <img src="F:\profile\Aravindh A.jpg"alt="your profile picture" class="profile-picture">
             <h1>ARAVINDH ANNADURAI</h1>
             <p>passionate on Study</p>
           </div>
